--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
 *{margin: 0px;}
+body{background-color: #6FF4DA; color:#8f6593;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;font-weight: bolder;}
 #img{width: 200px;border-radius: 50%;}
-#icone1{width: 30px;}
+#foto{margin: 20px;}
+#icones{width: 30px;display: inline-block; padding: 10px;margin: 6px;}
+#home{border: solid #FFBCB8; width:30%;padding: 10px; border-radius: 15%; margin: 30px;}
+li{list-style-type: none; text-decoration: underline; margin: 4px;}
